hard-gists/df919538bcef391bc89f/run.log
=== Docker Run Log for df919538bcef391bc89f ===
Started at: Mi 29. Okt 20:37:36 CET 2025

[2025-10-29 20:37:36] START: Running container for df919538bcef391bc89f
[2025-10-29 20:37:36] SUCCESS: Container e485e46e3413a8c848409a4117135979b0e6aee06384b5fd3c2a3dc6bb1b7254 started for df919538bcef391bc89f
=== Container logs for df919538bcef391bc89f ===
  File "/snippet.py", line 74
    print ''.join(line) + '\x1b[0m'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for df919538bcef391bc89f ===
[2025-10-29 20:37:38] INFO: Container e485e46e3413a8c848409a4117135979b0e6aee06384b5fd3c2a3dc6bb1b7254 has stopped
